--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      CadizLoop
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">CadizLoop</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>¿Qué es CadizLoop?</ion-card-subtitle>
+      <ion-card-title>CadizLoop</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        CadizLoop es una aplicación que permite a los usuarios crear rutas de senderismo y compartirlas con otros usuarios.
+      </p>
+    </ion-card-content>
+  </ion-card>
